# serenity-utils

./: Cargo.toml  README.md
crate/serenity-utils/: Cargo.toml
crate/serenity-utils-derive/: Cargo.toml
crate/serenity-utils-derive/src/: lib.rs
crate/serenity-utils/src/: builder.rs  handler.rs  lib.rs  message.rs  slash.rs  user_list.rs  voice_state.rs
crate/serenity-utils/src/handler/: mod.rs  user_list.rs  voice_state.rs
src/: lib.rs  user_list.rs
