[package]
name = "serenity-utils-derive"
version = "0.9.5"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
name = "serenity_utils_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
convert_case = "0.5"
if_chain = "1"
itertools = "0.10"
proc-macro2 = "1"
quote = "1"
syn = "1"
