[package]
name = "serenity-utils-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "serenity_utils_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
convert_case = "0.6"
if_chain = "1"
itertools = "0.10"
proc-macro2 = "1"
quote = "1"
syn = "1"
