[package]
name = "serenity-utils"
version = "0.9.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
name = "serenity_utils"
path = "src/lib.rs"

[dependencies]
futures = "0.3" # used in proc macro
parking_lot = "0.12" # used in proc macro
shlex = "1" # used in proc macro

[dependencies.derive_more] # used in proc macro
version = "0.99"
default-features = false
features = ["from"]

[dependencies.serenity]
version = "0.11"
features = ["unstable_discord_api"]

[dependencies.serenity-utils-derive]
version = "=0.9.1"
path = "../serenity-utils-derive"

[dependencies.tokio]
version = "1.3"
features = [
    "io-util",
    "net",
    "rt-multi-thread", # used in proc macro
    "sync",
    "time",
]

[dependencies.tokio-stream] # used in proc macro
version = "0.1"
features = ["io-util", "net"]
